--- a/style.css
+++ b/style.css
@@ -4,21 +4,25 @@ body{
 }
 h1{
     font-size: 50px;
+    font-weight: 700;
     color: #2a2930;
-    line-height: 100%;
+    line-height: 120%;
 }
-.name-highlight{
+.color-highlight{
     color: #fa320f;
 }
 .half-width{
     width: 30%;
     float: left;
-    margin-left: 50px;
-    padding-left: 5px;
+    margin-left: 80px;
+    padding-left: 20px;
+}
+.p-text{
+    padding-bottom: 30px;
 }
 .half-width img{
-    width: 600px;
-    padding-left: 150px;
+    width: 500px;
+    
 }
 .top-image{
     background-image: url("images/green-bg.png");
@@ -26,4 +30,41 @@ h1{
 }
 section{
     height: 700px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    padding: 16px 32px;
+    border-radius: 5px;
+    color: white;
+}
+/* .dream-area{
+    background-image: url(images/bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 150px;
+} */
+.box-style{
+    background-color: white;
+    box-shadow: 0px 10px 30px rgb(62 62 62 / 0.15);
+    border-radius: 5px;
+    padding: 30px 30px;
+}
+.text-c{
+    color: #666;
+    font-size: 1em;
+    line-height: 160%;
+}
+#exp-o{
+    border-left: 4px solid ;
+    border-image: linear-gradient(45deg, rgb(129, 33, 253), rgb(5, 7, 110));
+    border-image-slice: 1;
+}
+#full-stack{
+    border-left: 4px solid;
+    border-image: linear-gradient(45deg, lightSalmon, tomato);
+    border-image-slice: 1;
+}
+.footer{
+    text-align: center;
 }
